feat: add styles for body

--- a/css/style.scss
+++ b/css/style.scss
@@ -24,3 +24,15 @@
   html {
     scroll-behavior: smooth;
   }
+
+  body {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+  }
+
+  .img-block {
+    object-fit: cover;
+  }
