--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,9 @@ a {
     }
 }
 
+$backgroundColor: #9ff4f4;
+$ligthColor: #fcf2e6;
+
 html {
     scroll-behavior: smooth;
 }
@@ -37,27 +40,47 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: #9ff4f4;
+    background-color: $backgroundColor;
 }
 
 .container {
-  max-width: 102rem;
+    max-width: 102rem;
 }
 
 .slider {
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 3) - 0.625rem);
-  gap: 1rem;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 3) - 0.625rem);
+    gap: 1rem;
 }
 
 .slider-item {
-  height: 27rem;
-  background-color: antiquewhite;
-  list-style: none;
+    height: 27rem;
+    background-color: $ligthColor;
+    list-style: none;
 }
 
 .img-block {
-  margin: 1rem;
+    margin: 1rem;
     object-fit: cover;
+}
+
+.arrow-button {
+    font-size: 2rem;
+    width: 3.3rem;
+    height: 3.3rem;
+    border-radius: 50%;
+    color: $ligthColor;
+    background-color: $backgroundColor;
+    border: 0.25rem solid $ligthColor;
+    cursor: pointer;
+    transition: all 1s ease-out;
+
+    &:hover,
+    &:focus {
+        color: $backgroundColor;
+        background-color: $ligthColor;
+        border: none;
+        transform: scale(1.1);
+    }
 }
