--- a/css/style.scss
+++ b/css/style.scss
@@ -43,8 +43,14 @@ body {
     background-color: $backgroundColor;
 }
 
+main {
+    display: flex;
+    align-items: center;
+}
+
 .container {
     max-width: 102rem;
+    justify-content: center;
 }
 
 .slider {
@@ -52,6 +58,8 @@ body {
     grid-auto-flow: column;
     grid-auto-columns: calc((100% / 3) - 0.625rem);
     gap: 1rem;
+    overflow: hidden;
+    scroll-behavior: smooth;
 }
 
 .slider-item {
@@ -66,6 +74,7 @@ body {
 }
 
 .arrow-button {
+    margin: 0rem 1rem;
     font-size: 2rem;
     width: 3.3rem;
     height: 3.3rem;
@@ -83,4 +92,24 @@ body {
         border: none;
         transform: scale(1.1);
     }
+}
+
+@media screen and (max-width: 1300px) {
+  .container {
+    max-width: 68rem;
+}
+  .slider {
+    grid-auto-columns: calc((100% / 2) - 0.625rem);
+}
+  
+}
+
+@media screen and (max-width: 1100px) {
+  .container {
+    max-width: 34rem;
+}
+  .slider {
+    grid-auto-columns: calc((100% / 1) - 0.625rem);
+}
+  
 }
