--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=MonteCarlo&display=swap");
 /*Normalize*/
 * {
   padding: 0;
@@ -29,8 +30,8 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   min-height: 100vh;
   background-color: #9ff4f4;
 }
@@ -38,6 +39,7 @@ body {
 main {
   display: flex;
   align-items: center;
+  padding: 4rem 0rem;
 }
 
 .container {
@@ -58,6 +60,7 @@ main {
   height: 27rem;
   background-color: #fcf2e6;
   list-style: none;
+  transition: all 0.3s ease-out;
 }
 
 .img-block {
@@ -83,6 +86,18 @@ main {
   background-color: #fcf2e6;
   border: none;
   transform: scale(1.1);
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.author {
+  font-family: "MonteCarlo", cursive;
+  color: #fcf2e6;
 }
 
 @media screen and (max-width: 1300px) {
