--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=MonteCarlo&display=swap');
+
 /*Normalize*/
 
 * {
@@ -29,16 +31,20 @@ a {
 $backgroundColor: #9ff4f4;
 $ligthColor: #fcf2e6;
 
+@mixin position {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 html {
     scroll-behavior: smooth;
 }
 
 body {
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include position;
     min-height: 100vh;
     background-color: $backgroundColor;
 }
@@ -46,6 +52,7 @@ body {
 main {
     display: flex;
     align-items: center;
+    padding: 4rem 0rem;
 }
 
 .container {
@@ -66,6 +73,7 @@ main {
     height: 27rem;
     background-color: $ligthColor;
     list-style: none;
+    transition: all 0.3s ease-out;
 }
 
 .img-block {
@@ -92,6 +100,15 @@ main {
         border: none;
         transform: scale(1.1);
     }
+}
+
+footer {
+  @include position;
+}
+
+.author {
+  font-family: 'MonteCarlo', cursive;
+  color: $ligthColor;
 }
 
 @media screen and (max-width: 1300px) {
