--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,9 @@ footer {
   }
 }
 @media screen and (max-width: 530px) {
+  main {
+    padding: 2rem 1rem 4rem;
+  }
   .container {
     display: flex;
     max-width: 26rem;
@@ -147,10 +150,9 @@ footer {
     margin-right: 5rem;
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
   .container {
     max-width: 20rem;
-    margin-right: 1rem;
   }
   .slider img {
     width: 25rem;
